--- a/web-backend/composer.json
+++ b/web-backend/composer.json
@@ -11,7 +11,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "nahidulhasan/eloquent-filter": "^1.0",
+        "tucker-eric/eloquentfilter": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
