--- a/web-backend/composer.json
+++ b/web-backend/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "lorisleiva/laravel-actions": "^2.1",
         "nahidulhasan/eloquent-filter": "^1.0",
         "tucker-eric/eloquentfilter": "^3.0"
     },
