--- a/web-backend/composer.json
+++ b/web-backend/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-actions": "^2.1",
         "nahidulhasan/eloquent-filter": "^1.0",
-        "tucker-eric/eloquentfilter": "^3.0"
+        "tucker-eric/eloquentfilter": "^3.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
