--- a/nginx/deployment/development/site.conf
+++ b/nginx/deployment/development/site.conf
@@ -1,5 +1,5 @@
 server {
-    server_name 127.0.0.1 localhost;
+    server_name laukudati.eu www.laukudati.eu;
     root /var/www/public;
     client_max_body_size 32m;
 
